--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
+    "date-fns": "^4.1.0",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
@@ -21,7 +23,8 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
