--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
